@@ -1,3 +1,9 @@
+2001-07-09  Tambet Ingo  <tambet@ximian.com>
+
+	* x.pl.in (x_update_display_mode): Implement.
+	(x_update_kw_list): Implement, has it's own function now.
+	(xml_parse_display_modes): Implement.
+
 2001-07-06  Arturo Espinosa Aldama  <arturo@ximian.com>
 
 	* network.pl.in (xst_network_lookup_address_collect):
